# redblackgraph

./: .coverage  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  MATHEMATICAL_ANALYSIS.md  NOTES.md  PRE_RELEASE_REVIEW.md  README.md  README.rst  RELEASE_CHECKLIST.md  Readme.txt  analysis_semiring.py  bench_closure.py  bibliography.md  coverage.cfg  generate_config.py  meson.build  plot_cache_stats.py  pyproject.toml  requirements-dev.txt  requirements-jupyter.txt  requirements-numba.txt  requirements.txt  research.MD  sample.js  setup.cfg  setup.py  workingOn.MD
.github/workflows/: build-wheels.yml  ci.yml  integration.yml  release.yml
.legacy/: README.md
.legacy/numpy_distutils_build/: setup.py
.plans/: alpha_evolve.md  architecture_decisions.md  branching_strategy.md  dev_setup.md  github_actions_ci_status.md  github_actions_migration_COMPLETE.md  gpu_implementation.md  mig_phase1_sprint_2.md  mig_phase1_sprint_3.md  numpy_einsum_comparison.md  phase1_modification_checklist.md  phase1_progress_summary.md  regression_fix_summary.md  sprint1_completion_summary.md  sprint2_completion_summary.md  test_results_phase1.md  upgrade_checklist.md  upgrade_code_examples.md  upgrade_python_numpy_scipy.md
.plans/.windsurf/: config.toml
.plans/archive/: sparse_closure.md  (+2 more)
.sandy/: Dockerfile  config
.windsurf/: config.toml
_testing_output/: pylint_output.txt  pytest_output.txt
config/: README.md  exclusions.json
docker/: README.md  dockerutils.cfg  run.cfg
docs/: APPLICATIONS_BEYOND_GENEALOGY.md  GPU_NAIVE_SUMMARY.md  PYPI_PUBLISHING.md  VERSIONING_MIGRATION.md  cycle_breaking_strategies.md  gpu_naive_implementation.md
examples/: gpu_naive_demo.py  gpu_workflow.py  sparse_workflow.py
javascript/: package.json
notebooks/: Abstract Vector Space.ipynb  Avos Algebraic Structure.ipynb  Avos Vector Space.ipynb  Experiments - Rapp FamilyHistory.ipynb  Figures.ipynb  Genealogy and Vector Spaces.ipynb  I. Red Black Graphs.ipynb  II. Linear Algebra of Red Black Graphs.ipynb  III. Python Implementation.ipynb  Linear Algebra of Red Black Graphs.ipynb  LinearAlgebraForRedBlackGraphs.ipynb  Notes on Writing a Numpy Extension.ipynb  Python Implementation.ipynb  Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.bib  Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb  Red Black Graphs.ipynb  Todo List.ipynb  redblackgraph.ipynb
redblackgraph/: __init__.py  _version.py  constants.py  generate_sparsetools.py  meson.build  operators.py  rbm.py  redblackgraph.ipynb  redblackgraph.py  setup.py  simple_impl.py
redblackgraph/core/: __init__.py  avos.py  avos_einsumfunc.py  einsumfunc.py  meson.build  rbm.py  redblack.py  setup.py  setup_common.py
redblackgraph/core/include/numpy/: npy_2_compat.h
redblackgraph/core/src/multiarray/: README.MD  rbg_math.c.src  rbg_math.h.src  redblack.c.src  relational_composition.c.src  warshall.c.src
redblackgraph/core/src/redblackgraph/: README.MD  rbg_math.c.in  rbg_math.c.src  rbg_math.h.in  rbg_math.h.src  redblack.c.src  redblack.h  redblackgraphmodule.c  relational_composition.c.in  relational_composition.c.src  warshall.c.in  warshall.c.src
redblackgraph/core/src/redblackmultiarray/: README.MD  redblack.c.src
redblackgraph/core/src/sparsetools/: CMakeLists.txt  rbm.cxx  rbm.h  rbm_impl.h  sparsetools.cxx  sparsetools.h
redblackgraph/gpu/: README.md  __init__.py  _cuda_utils.py  _device_policy.py  avos_kernels.py  core.py  csr_gpu.py  matrix.py  meson.build  spgemm.py  spgemm_numeric.py  spgemm_symbolic.py  transitive_closure.py
redblackgraph/io/: relationship_file_io.py
redblackgraph/reference/: __init__.py  avos.py  calc_relationship.py  components.py  generation.py  mat_avos.py  meson.build  ordering.py  permutation.py  rbg_math.py  rel_composition.py  relational_composition.py  shortest_path.py  topological_sort.py  transitive_closure.py  transitive_closure_dag.py  triangularization.py  util.py  vec_avos.py  warshall.py
redblackgraph/simple/: __init__.py  avos.py  calc_relationship.py  components.py  foo.py  generation.py  mat_avos.py  rel_composition.py  triangularization.py  util.py  vec_avos.py  warshall.py
redblackgraph/sparse/: __init__.py  avos.py  generate_sparsetools.py  meson.build  rbm.py  setup.py
redblackgraph/sparse/csgraph/: __init__.py  _components.pyx  _csr_utils.pxi  _density.py  _ordering.pyx  _permutation.pyx  _rbg_math.pxi  _rbg_math.pyx  _relational_composition.pyx  _shortest_path.pyx  _sparse_format.py  _tools.pyx  _topological_sort.pyx  _transitive_closure_dag.pyx  _validation.py  cycleerror.py  meson.build  ordering.py  parameters.pxi  setup.py  transitive_closure.py
redblackgraph/sparse/sparsetools/: rbm.cxx  rbm.h  rbm_impl.h  rbm_math.h  sparsetools.cxx  sparsetools.h  sparsetools_impl.h
redblackgraph/sparsetools/: sparsetools_impl.h
redblackgraph/tests/: relationship_file_parser.py  test_einsum.py  test_loops.py  test_operators.py  test_rbm.py  test_redblack.py  test_redblackgraph.py  test_warshall.py
redblackgraph/tests/resources/: person-relationship.csv
redblackgraph/tests/simple/: test_components.py  test_mat_avos.py  test_rel_composition.py  test_vec_avos.py  test_warshall.py
redblackgraph/types/: __init__.py  color.py  meson.build  ordering.py  relationship.py  transitive_closure.py
redblackgraph/util/: __init__.py  capture.py  graph_builder.py  meson.build  names.py  relationship_db_io.py  relationship_file_io.py  synthesizer.py  test_support.py  utils.py
scripts/: analyze_relationship_types.py  build_graphs.sh  compute_canonical_forms.py  detect_and_break_cycles.py  export_cached_graph.py  export_canonical_graph.py  generate_sparsetools.py  memtest.py  rbg  rbgcf  rgbcf  setup_dgx_spark.sh
src/: redBlackGraph.js
test/: testRedBlackGraph.js
tests/: debug.py  test_cycle_detection.py  test_einsum.py  test_loops.py  test_parity_constraints.py  test_rbm.py  test_redblack.py
tools/: process_src_template.py  tempita_processor.py
(+133 files in other folders)
