# Core subpackage - C extensions and Python modules
# TODO: Sprint 2 - Add C extension building

# For now, just install Python sources
python_sources = [
  '__init__.py',
  'redblack.py',
]

py.install_sources(
  python_sources,
  subdir: 'redblackgraph/core'
)

# C extensions will be added in Sprint 2:
# - _redblack extension
# - _warshall extension  
# - _relational_composition extension
