# GPU subpackage - GPU-accelerated implementations using CuPy and CUDA

python_sources = [
  '__init__.py',
  '_cuda_utils.py',
  '_device_policy.py',
  'core.py',
  'matrix.py',
  'csr_gpu.py',
  'avos_kernels.py',
  'spgemm_symbolic.py',
  'spgemm_numeric.py',
  'spgemm.py',
  'README.md',
]

py.install_sources(
  python_sources,
  subdir: 'redblackgraph/gpu'
)
