# Reference subpackage - pure Python implementations

python_sources = [
  '__init__.py',
  'calc_relationship.py',
  'components.py',
  'generation.py',
  'mat_avos.py',
  'ordering.py',
  'permutation.py',
  'rbg_math.py',
  'relational_composition.py',
  'shortest_path.py',
  'topological_sort.py',
  'transitive_closure.py',
  'vec_avos.py',
]

py.install_sources(
  python_sources,
  subdir: 'redblackgraph/reference'
)
