# Csgraph subpackage - C extensions
# TODO: Sprint 3 - Add C extension building

# For now, just install Python sources
python_sources = [
  '__init__.py',
]

py.install_sources(
  python_sources,
  subdir: 'redblackgraph/sparse/csgraph'
)

# C extensions will be added in Sprint 3:
# - _traversal extension
# - _flow extension
# - _matching extension
